2013-05-15 belangeo <belangeo@gmail.com>

    * Added new objects: ButLP, ButHP, ButBP, ButBR, second-order Butterworth filters.
    - rev 1104

2013-05-09 belangeo <belangeo@gmail.com>

    * Added new objects: Reson and Resonx, second-order resonant bandpass filters.
    - rev 1102

-------------------------------------------------------------------------------------

2013-05-08 belangeo <belangeo@gmail.com>

    * Release tag: 0.6.6.
    - rev 1100

2013-05-08 belangeo <belangeo@gmail.com>

    * Fixed Notein bug when receiving note-off message with positive velocity.
    - rev 1096

2013-05-07 belangeo <belangeo@gmail.com>

    * Added new object: Spectrum, Frequency spectrum analyzer.
    - rev 1095

2013-04-19 belangeo <belangeo@gmail.com>

    * Added new object: CvlVerb, convolution based reverb.
    - rev 1094

-------------------------------------------------------------------------------------

2013-04-13 belangeo <belangeo@gmail.com>

    * Release tag: 0.6.5.
    - rev 1091

2013-04-12 belangeo <belangeo@gmail.com>

    * Added new object: Average, Moving average filter.
    - rev 1090

2013-04-12 belangeo <belangeo@gmail.com>

    * Added new object: SVF, State Variable Filter with continuous filter type change.
    - rev 1089

2013-10-11 belangeo <belangeo@gmail.com>

    * Added a setStealing() method to the Notein object.
    - rev 1087

2013-10-10 belangeo <belangeo@gmail.com>

    * Added a reset() method to the PyoTableObject.
    - rev 1086

2013-03-08 belangeo <belangeo@gmail.com>

    * Added new object: Yin, pitch tracker using the Yin algorithm.
    - rev 1084

2013-03-01 belangeo <belangeo@gmail.com>

    * Graphical display of NewMatrix object now updates in real-time.
    - rev 1082

2013-02-28 belangeo <belangeo@gmail.com>

    * Graphical display of table objects now updates in real-time.
    - rev 1080

-------------------------------------------------------------------------------------

2013-02-17 belangeo <belangeo@gmail.com>
